--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,26 @@ services:
     container_name: load-nft-frontend
     image: load-nft/frontend
     build:
-      context: ./ml
+      context: ./
       dockerfile: ./frontend.Dockerfile
+      args:
+        ANTI_CACHE: $(date +%s)
+    secrets:
+      - git_rsa
     ports:
       - 10080:80
       - 10443:443
+    restart: always
   backend:
     container_name: load-nft-backend
     image: load-nft/backend
     ports:
       - 11080:80
       - 11443:443
+    restart: always
+
+secrets:
+  git_rsa:
+    file: ~/.ssh/loadsite_rsa
+  git_rsa.pub:
+    file: ~/.ssh/loadsite_rsa.pub
