--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "3.9"
 
 services:
   frontend:
@@ -7,10 +7,9 @@ services:
     build:
       context: ./
       dockerfile: ./frontend.Dockerfile
-      # args:
-      #   ANTI_CACHE: $(date +%s)
     secrets:
       - git_rsa
+      - git_rsa.pub
     ports:
       - 10080:80
       - 10443:443
@@ -28,3 +27,5 @@ secrets:
     file: ~/.ssh/loadsite_rsa
   git_rsa.pub:
     file: ~/.ssh/loadsite_rsa.pub
+  readme:
+    file: ./README.md
